Day3/Module2/flux/sre-course-infra/instructor-prod/deployment-mysqld-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: mysqld-exporter
    app.kubernetes.io/name: orderbook
  name: mysqld-exporter
  namespace: instructor-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mysqld-exporter
      app.kubernetes.io/name: orderbook
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mysqld-exporter
        app.kubernetes.io/name: orderbook
    spec:
      containers:
        - env:
            - name: DATA_SOURCE_NAME
              value: "root:secret123@(orderbookdb:3306)/"
          image: prom/mysqld-exporter
          name: mysqld-exporter
          imagePullPolicy: Always
          ports:
            - name: http-prom
              containerPort: 9104
      restartPolicy: Always
