Day3/Module2/flux/sre-course-infra/instructor-prod/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: orderbook
  name: orderbookapi
  namespace: instructor-prod
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    name: orderbookapi
status:
  loadBalancer: {}
